--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ footer_text: >
 keywords: network science, ai, machine learning, social network analysis, graph mining  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: graph-icon.png  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: new-logo.png # graph-icon.png  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://satyakisikdar.github.io # the base hostname & protocol for your site
 baseurl:  # the subpath of your site, e.g. /blog/
